...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_create_login"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageViewLoginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_info"
            tools:ignore="ContentDescription"/>

    </LinearLayout>
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_create_password"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageViewPasswordInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_info"
            tools:ignore="ContentDescription"/>
    </LinearLayout>

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginTop="@dimen/default_margin">

        <EditText
            android:id="@+id/editTextConfirmedPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_confirm_your_password"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/button_register"
        android:textStyle="bold"/>
...
